--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <title>真·屎山</title>
 </head>
 <body>
-                <h1>🟫</h1>
-                <h1>🟫🟫</h1>
-             <h1>🟫🟫🟫🟫</h1>
-             <h1>🟫🟫🟫🟫</h1>
-          <h1>🟫🟫🟫🟫🟫🟫</h1>
-          <h1>🟫🟫🟫🟫🟫🟫</h1>
-       <h1>🟫🟫🟫🟫🟫🟫🟫🟫</h1>
-       <h1>🟫🟫🟫🟫🟫🟫🟫🟫</h1>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🟫</h1>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🟫🟫</h1>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🟫🟫🟫🟫</h1>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🟫🟫🟫🟫</h1>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🟫🟫🟫🟫🟫🟫</h1>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🟫🟫🟫🟫🟫🟫</h1>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;🟫🟫🟫🟫🟫🟫🟫🟫</h1>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;🟫🟫🟫🟫🟫🟫🟫🟫</h1>
     <h1>🟫🟫🟫🟫🟫🟫🟫🟫🟫🟫</h1>
     <h1>🟫🟫🟫🟫🟫🟫🟫🟫🟫🟫</h1>
 </body>
